--- a/.env
+++ b/.env
@@ -1,17 +1,11 @@
-DATABASE_URL="mysql://root@localhost:3306/social_ai_manager"
-# === SERVER CONFIG ===
+DATABASE_URL="postgresql://neondb_owner:npg_dyagelx63cXI@ep-noisy-sea-ag71u5aj-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+
 PORT=3000
 
-# === JWT (usato per firmare i token e lo state OAuth) ===
 JWT_SECRET=JSHDGASHDG6723gsdgHJGSAHGDJHGSDJHGSDJHGASD7326asdgsdASD
 
-# === TIKTOK OAUTH CONFIG ===
 TIKTOK_CLIENT_KEY=sbawxi4dv5koe378ff
 TIKTOK_CLIENT_SECRET=kg6PCVcCNZBqbwqWazkhZPmG1BFxY1W
-TIKTOK_REDIRECT_URI=http://localhost:3000/auth/tiktok/callback
+TIKTOK_REDIRECT_URI=https://social-backend-4yga.onrender.com/auth/tiktok/callback
 
-
-
-# === FRONTEND URL ===
 FRONTEND_URL=http://localhost:4200
-
