Force redeploy to refresh TikTok ENV

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ JWT_SECRET=JSHDGASHDG6723gsdgHJGSAHGDJHGSDJHGSDJHGASD7326asdgsdASD
 
 TIKTOK_CLIENT_KEY=sbawxi4dv5koe378ff
 TIKTOK_CLIENT_SECRET=kg6PCVcCNZBqbwqWazkhZPmG1BFxY1W
-TIKTOK_REDIRECT_URI=https://social-backend-4yga.onrender.com/auth/tiktok/callback
+TIKTOK_REDIRECT_URI=https://social-beckend.onrender.com/auth/tiktok/callback
+
 
 FRONTEND_URL=http://localhost:4200
